# psswd_box

./: .gitignore  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  install.py  main.py  pyproject.toml  requirements.txt
psswd_box/: app.py  password_generator.py  psswd_box.py
psswd_box/resources/configs/: config.yaml
psswd_box/resources/modules/: password_generator.py  psswd_box_generator.py
psswdbox/: CHANGELOG  README.rst  pyproject.toml  requirements.txt
psswdbox/src/psswdbox/: __main__.py  app.py
psswdbox/src/psswdbox/resources/configs/: config.yaml
src/psswd_box/: app.py  main.py
src/psswd_box/resources/: PYPI_README.md
