[tool.poetry]
name = "psswd-box"
version = "1.0.0"
description = ""
authors = ["Melvin Quick <melvinquick@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyyaml = "^6.0.2"
pyside6 = "^6.8.1.1"


[tool.poetry.group.dev.dependencies]
bandit = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
